--- a/thesis.bib
+++ b/thesis.bib
@@ -3683,3 +3683,15 @@ URL = {https://doi.org/10.1137/0216006},
 	title = {A metalloporphyrin functionalized metal{\textendash}organic framework for selective oxidization of styrene},
 	journal = {Chem. Commun.}
 }
+@article{Wragg_2001,
+	doi = {10.1039/b100471i},
+	url = {https://doi.org/10.1039%2Fb100471i},
+	year = 2001,
+	publisher = {Royal Society of Chemistry ({RSC})},
+	volume = {11},
+	number = {7},
+	pages = {1850--1857},
+	author = {David S. Wragg and Alexandra M. Z. Slawin and Russell E. Morris},
+	title = {The synthesis of gallium phosphate frameworks with and without fluoride ions present: attempts to direct the synthesis of double four-ring containing materials},
+	journal = {J. Mater. Chem.}
+}
