--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -6,7 +6,7 @@
 \chapter{Toward the next generation of screenings}
 \vspace*{-1\baselineskip}
 
-\section{Limits of Current Screening Methodologies}
+\textbf{Limits of Current Screening Methodologies}
 
 Comme présenté dans notre article de revue sur les différentes techniques de screening de performances de matériaux,\autocite{Ren_2022} les méthodologies standard de screening sont en silo : certains se concentrent sur les propriétés thermodynamiques, d'autres sur les propriétés de transports et la flexibilité n'est étudiée que de manière embryonnaire du point de vue du screening. L'ambition de la troisième année est de mettre en lien ces différents screenings afin de prédire au plus près les performances expérimentales tout en parcourant de larges bases de données. 
 
@@ -48,6 +48,15 @@ Fort de ces deux constats, il est plus probable que le matériau SBMOF-1 réel a
 \todo{put graph comparing experiment and UFF}
 
 The beginning of some explication
+
+
+\section{Further studies on the transport properties}
+
+\subsection{more work on TST based approach}
+Next steps in the development of the C tool
+
+\subsection{connection to experiment}
+RUPTURE, breakthrough curve
 
 \section{Flexibility in a Screening}
 Final screening step, easy integration into the workflow of current sreenings
